# HarryPotterGame

./: .gitignore  HaskellAdventure.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main  Main.hi  Main.hs
